baml_language/crates/baml_tests/snapshots/type_builder_errors/baml_tests__type_builder_errors__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ITEMS ===
function TypeBuilderFn.build_request(from_text: string) -> baml.http.Request {
    baml.llm.build_request("TypeBuilderFn", { "from_text": from_text })
}

function TypeBuilderFn.render_prompt(from_text: string) -> baml.llm.PromptAst {
    baml.llm.render_prompt("TypeBuilderFn", { "from_text": from_text })
}

function TypeBuilderFn(from_text: string) -> Resume {
    baml.llm.call_llm_function("TypeBuilderFn", { "from_text": from_text })
}

class Resume {
  name: string
}

class stream_Resume {
  name: null | string @sap.missing(null)
}

test MultipleTypeBuilderBlocks {
  functions: ["TypeBuilderFn"]
  type_builder {
    class Foo {
      foo: string
    }
    dynamic class Bar {
      bar: int
    }
  }
}

test SingleTypeBuilderBlock {
  functions: ["TypeBuilderFn"]
  type_builder {
    class LocalClass {
      x: string
    }
    dynamic class LocalDynamic {
      y: int
    }
  }
}
