baml_language/crates/baml_tests/snapshots/type_builder_errors/baml_tests__type_builder_errors__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.TypeBuilderFn(from_text: string) -> Resume {
    // Locals:
    let _0: Resume // _0 // return
    let _1: string // from_text // param
    let _2: baml.llm.Client
    let _3: baml.llm.Client[]
    let _4: map<string, unknown>

    bb0: {
        _3 = [];
        _2 = baml.llm.Client { const "openai/gpt-4o-mini", const baml.llm.ClientType.Primitive, copy _3, const null, const 0_i64 };
        _4 = { const "from_text": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(copy _2, const "TypeBuilderFn", copy _4) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.TypeBuilderFn$build_request(from_text: string) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // from_text // param
    let _2: baml.llm.Client
    let _3: baml.llm.Client[]
    let _4: map<string, unknown>

    bb0: {
        _3 = [];
        _2 = baml.llm.Client { const "openai/gpt-4o-mini", const baml.llm.ClientType.Primitive, copy _3, const null, const 0_i64 };
        _4 = { const "from_text": copy _1 };
        _0 = call const fn baml.llm.build_request(copy _2, const "TypeBuilderFn", copy _4) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.TypeBuilderFn$parse(json: string) -> Resume {
    // Locals:
    let _0: Resume // _0 // return
    let _1: string // json // param

    bb0: {
        _0 = call const fn baml.llm.parse(const "TypeBuilderFn", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.TypeBuilderFn$render_prompt(from_text: string) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // from_text // param
    let _2: baml.llm.Client
    let _3: baml.llm.Client[]
    let _4: map<string, unknown>

    bb0: {
        _3 = [];
        _2 = baml.llm.Client { const "openai/gpt-4o-mini", const baml.llm.ClientType.Primitive, copy _3, const null, const 0_i64 };
        _4 = { const "from_text": copy _1 };
        _0 = call const fn baml.llm.render_prompt(copy _2, const "TypeBuilderFn", copy _4) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
