baml_language/crates/baml_tests/snapshots/type_builder_errors/baml_tests__type_builder_errors__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.TypeBuilderFn(from_text: string) -> user.Resume throws never {
  baml.llm.call_llm_function<T>(baml.llm.Client { name: "openai/gpt-4o-mini", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "TypeBuilderFn", map { "from_text": from_text }) : user.Resume
}
function user.TypeBuilderFn$render_prompt(from_text: string) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(baml.llm.Client { name: "openai/gpt-4o-mini", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "TypeBuilderFn", map { "from_text": from_text }) : baml.llm.PromptAst
}
function user.TypeBuilderFn$build_request(from_text: string) -> baml.http.Request throws never {
  baml.llm.build_request(baml.llm.Client { name: "openai/gpt-4o-mini", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "TypeBuilderFn", map { "from_text": from_text }) : baml.http.Request
}
function user.TypeBuilderFn$parse(json: string) -> user.Resume throws never {
  baml.llm.parse<T>("TypeBuilderFn", json) : user.Resume
}
class user.Resume {
  name: string
}
class user.Resume$stream {
  name: null | string
}
