baml_language/crates/baml_tests/snapshots/type_builder_errors/baml_tests__type_builder_errors__04_tir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.TypeBuilderFn(from_text: string) -> user.Resume {
  baml.llm.call_llm_function(Client { name: "openai/gpt-4o-mini", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "TypeBuilderFn", map { "from_text": from_text }) : unknown
}
function user.TypeBuilderFn$render_prompt(from_text: string) -> baml.llm.PromptAst {
  baml.llm.render_prompt("TypeBuilderFn", map { "from_text": from_text }) : baml.llm.PromptAst
}
function user.TypeBuilderFn$build_request(from_text: string) -> baml.http.Request {
  baml.llm.build_request("TypeBuilderFn", map { "from_text": from_text }) : baml.http.Request
}
class user.Resume {
  name: string
}
