baml_language/crates/baml_tests/snapshots/type_builder_errors/baml_tests__type_builder_errors__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unreachable arm
     ╭─[ llm_types.baml:159:17 ]
     │
 159 │             _ => { continue; }
     │                 ───────┬──────  
     │                        ╰──────── unreachable arm
     │ 
     │ Note: Error code: E0001
─────╯

  [type] Error: unreachable arm
     ╭─[ llm_types.baml:189:17 ]
     │
 189 │ ╭─▶             _ => {
     ┆ ┆   
 194 │ ├─▶             }
     │ │                   
     │ ╰─────────────────── unreachable arm
     │     
     │     Note: Error code: E0001
─────╯

  [type] Error: unreachable arm
     ╭─[ llm_types.baml:208:17 ]
     │
 208 │             _ => { continue; }
     │                 ───────┬──────  
     │                        ╰──────── unreachable arm
     │ 
     │ Note: Error code: E0001
─────╯
