baml_language/crates/baml_tests/snapshots/type_builder_errors/baml_tests__type_builder_errors__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.TypeBuilderFn(from_text: string) -> Resume {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o-mini"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "TypeBuilderFn"
    load_var from_text
    load_const "from_text"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function user.TypeBuilderFn$build_request(from_text: string) -> baml.http.Request {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o-mini"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "TypeBuilderFn"
    load_var from_text
    load_const "from_text"
    alloc_map 1
    call baml.llm.build_request
    return
}

function user.TypeBuilderFn$parse(json: string) -> Resume {
    load_const "TypeBuilderFn"
    load_var json
    call baml.llm.parse
    return
}

function user.TypeBuilderFn$render_prompt(from_text: string) -> baml.llm.PromptAst {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o-mini"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "TypeBuilderFn"
    load_var from_text
    load_const "from_text"
    alloc_map 1
    call baml.llm.render_prompt
    return
}
