baml_language/crates/baml_tests/snapshots/type_builder_errors/baml_tests__type_builder_errors__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.TypeBuilderFn(from_text: string) -> user.Resume {
    load_const "TypeBuilderFn"
    load_var from_text
    load_const "from_text"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}
